--- a/my-app/src/components/Main/Header/Header.css
+++ b/my-app/src/components/Main/Header/Header.css
@@ -1,9 +1,6 @@
 .header {
     display: flex;
+    flex-direction: column;
+    gap: 2vw;
 }
 
-h1 {
-    margin: 0;
-    color: #303972;
-    font-weight: bold;
-}
